--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dotenv~=0.9.9
 langchain-core~=1.0.7
 langsmith~=0.4.43
 langchain~=1.0.8
+langchain_chroma
 langchain-community~=0.4.1
 langchain-text-splitters~=1.0.0
 langchain_ollama~=1.0.0
